# Tiny-RL

./: README.md  config.yaml  job.yaml  loss.py  pyproject.toml  rewards.py  test.py  test_multinode_rdma.py  train.py
.claude/: settings.local.json
configs/: qwen3-1.7B-1-node-competition-math.yaml  qwen3-1.7B-2-nodes-competition-math.yaml  qwen3-1.7B-competition-math.yaml  weight-sync-test-minimal.yaml  weight-sync-test-multinode-rdma.yaml
src/: config.yaml  controller.py  launch.py  loss.py  replay_buffer.py  rewards.py  rollout_engine.py  rollout_server.py  train.py  train_engine.py  train_server.py  utils.py
src/weight_sync/: __init__.py  base.py  qwen_router.py  train_backends.py  transport.py
src/weight_sync/rdma/: __init__.py  ibverbs_layer.py  libfabric_layer.py
